Satisify HACS requirement of issue_tracker key

--- a/custom_components/incontrol2/manifest.json
+++ b/custom_components/incontrol2/manifest.json
@@ -6,5 +6,6 @@
   "documentation": "https://www.github.com/sneelco/hass-incontrol2",
   "requirements": [],
   "dependencies": ["http"],
-  "codeowners": ["@sneelco"]
+  "codeowners": ["@sneelco"],
+  "issue_tracker": "https://github.com/sneelco/hass-incontrol2/issues"
 }
