--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,20 +1,38 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-      {
-        "label": "Start Home Assistant",
-        "type": "shell",
-        "command": "supervisor_run",
-        "group": {
-          "kind": "test",
-          "isDefault": true
-        },
-        "presentation": {
-          "reveal": "always",
-          "panel": "new"
-        },
-        "problemMatcher": []
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Start Home Assistant",
+      "type": "shell",
+      "command": "supervisor_run",
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
+      },
+      "problemMatcher": []
+    },
+    {
+      "type": "docker-build",
+      "label": "docker-build",
+      "platform": "python",
+      "dockerBuild": {
+        "tag": "hassincontrol2:latest",
+        "dockerfile": "${workspaceFolder}/Dockerfile",
+        "context": "${workspaceFolder}",
+        "pull": true
       }
-    ]
-  }
-  
+    },
+    {
+      "type": "docker-run",
+      "label": "docker-run: debug",
+      "dependsOn": ["docker-build"],
+      "python": {
+        "file": "custom_components/incontrol2/__init__.py"
+      }
+    }
+  ]
+}
